<resources>
    <string name="app_name">Subhub</string>
    <string name="no_folders_expl">You haven\'t selected any folders or the folders you\'ve added do not contain video material, to easily access a video name when searching for subtitles, try adding video folders by clicking here or on the icon on your right with the + sign</string>
    <string name="movie_video_name">Movie/video/TV show name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="empty_field">Field cannot be empty !</string>
    <string name="the_movie_name_title">The movie name/title</string>
    <string name="subtitles_language">Subs language</string>
    <string name="click_here_to_choose_language">Click here to choose language</string>
    <string name="pick_movie_language">Choose a language !</string>
    <string name="language_placeholder">Language: %1$s</string>
    <string name="language_code_placeholder">Language code: %1$s</string>
    <string name="language_name">Language name</string>
    <string name="search_language_by_name">Search language by name</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="search_by_name">Search by name…</string>
    <string name="location_folder">Download location folder</string>
    <string name="click_here_to_choose_download_location">Click here to choose download location</string>
    <string name="an_error_has_occurred">An error has occurred, try again later !</string>
    <string name="downloads">Downloads</string>
    <string name="sub_rating">Sub rating</string>
    <string name="sub_language">Subtitle language: %1$s</string>
    <string name="movie_name">Movie name: %1$s</string>
    <string name="obtaining_subtitle_file">Obtaining subtitle file</string>
    <string name="subtitles">Subtitles</string>
    <string name="succ_dl_sub">Download success !</string>
    <string name="failed_to_get_sub">Failed to download subtitle !</string>
    <string name="obtaining_sub_file">Obtaining subtitle file</string>
    <string name="no_internet_connection">Please establish an internet connection !</string>
    <string name="settings">Settings</string>
    <string name="preferred_language">Preferred language</string>
    <string name="preferred_download_location">Preferred download location</string>
    <string name="delete_cache">Delete cache</string>
    <string name="cache_data_del_expl">Remove cached data, this doesn\'t delete the downloaded subtitles.</string>
    <string name="deletion_success">Deletion success !</string>
    <string name="deletion_failed">Deletion failed !</string>
    <string name="selected_dl_folder_expl">If you haven\'t set a folder, every time on download it\'ll ask you for a desired destination.</string>
    <string name="preferred_language_expl">If you haven\'t set a language of choice for the subtitle files, it\'s going to ask you every time you choose to download a subtitle.</string>
    <string name="remove_dl_location_or_insert_new_one">Remove selected download location or select new one ?</string>
    <string name="remove">Remove</string>
    <string name="insert">Insert</string>
    <string name="remove_selected_language_or_insert_new_one">Remove the currently selected language or select a new one ?</string>
    <string name="currently_selected">Currently selected: %1$s</string>
    <string name="currently_selected_language">Language selected: %1$s</string>
    <string name="currently_selected_dl_location">Download folder: %1$s</string>
    <string name="no_subs_loaded_expl">There weren\'t any subtitles found by the search criteria you\'ve submitted !</string>
    <string name="folder_sources_no_data_expl">You can start adding folder destinations by clicking on the button in your bottom right corner.</string>
    <string name="folder_source_hold_expl">Long press on a folder to remove it</string>
    <string name="okay">Okay</string>
    <string name="confirm_deletion">You\'re about to remove a folder source for your video files, are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="folder_name">Folder name: %1$s</string>
    <string name="video_count">Video files: %1$d</string>
    <string name="no_apps_to_handle_action">No applications can handle this action !</string>
    <string name="new_one">New</string>
    <string name="search">Search</string>
    <string name="subtitles_search">Subtitles search…</string>
    <string name="video_source_folders">Folder sources</string>
    <string name="movie_dl_app">Movie downloader app</string>
    <string name="checkout_app">Use this app to download movies</string>
    <string name="customizations">Customizations</string>
    <string name="rate_us">Rate us</string>
    <string name="content">Content</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="my_other_apps">My other apps</string>
    <string name="no_videos_available">No movies available with the supported subtitles format.</string>
    <string name="file_manager_missing_expl">Make sure to install a document manager app !</string>
    <string name="pick_download_location">Pick download location !</string>
    <string name="banner">ca-app-pub-3874068061332875/7265345768</string>
</resources>
