<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        app:key="settings_pref_language"
        app:singleLineTitle="true"
        app:summary="@string/preferred_language_expl"
        app:title="@string/preferred_language" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="settings_pref_dl_location"
        app:singleLineTitle="true"
        app:summary="@string/selected_dl_folder_expl"
        app:title="@string/preferred_download_location" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="settings_pref_delete_cache"
        app:singleLineTitle="true"
        app:summary="@string/cache_data_del_expl"
        app:title="@string/delete_cache" />


</PreferenceScreen>