<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:padding="@dimen/margin_16"
        android:textStyle="bold"
        android:text="@string/subtitles_search"
        android:textSize="16sp"
        android:layout_margin="4dp"
        android:id="@+id/subSearch"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/movieNameInputLayout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subSearch"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_24"
        app:helperText="@string/movie_video_name"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/movieNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/the_movie_name_title"
            android:inputType="textAutoComplete"
            android:textColor="@color/helperColor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languageInputLayout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieNameInputLayout"
        android:layout_margin="@dimen/margin_24"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        app:helperText="@string/click_here_to_choose_language"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/languageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/subtitles_language"
            android:inputType="none"
            android:longClickable="false"
            android:textColor="@color/helperColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/downloadLocationInputLayout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageInputLayout"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_24"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        app:helperText="@string/click_here_to_choose_download_location"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/downloadLocationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/location_folder"
            android:inputType="none"
            android:longClickable="false"
            android:textColor="@color/helperColor" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/downloadLocationInputLayout"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_24"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            app:cornerRadius="@dimen/margin_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_24"
            android:layout_weight="0.5"
            android:text="@string/search"
            app:cornerRadius="@dimen/margin_8" />

    </LinearLayout>

</RelativeLayout>