<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_ss_search_language_layout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:helperText="@string/search_language_by_name"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_mss_movie_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/language_name"
            android:inputType="textAutoComplete"
            android:textColor="@color/helperColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_ss_languages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/dialog_ss_cancel"
        android:layout_below="@id/dialog_ss_search_language_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_ss_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_24"
        android:text="@string/cancel"
        app:cornerRadius="@dimen/margin_8" />

</RelativeLayout>